--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.3.4",
     "vue-autosuggest": "^2.2.0",
     "vue-chartjs": "^5.2.0",
+    "vue-datepicker": "^1.3.0",
     "vue-router": "^4.2.4",
     "vuetify": "^3.3.8",
     "vuex": "^4.1.0"
